# OCR

./: .clang-format  .clang_complete  .gitignore  AUTHORS  DEEPMINDV2.save  DEEPMINDV3.save  Makefile  Makefile.am  Makefile.bak  README  TAGS  build_opti.sh  configure.ac  good.save  main
doc/: Makefile.am  doxyconfig  doxyconfig.in
generate/: generate.c
headers/: layer.h  neuralnet.h  utils.h
headers/imgprocessing/: display.h  drawing.h  pixop.h  processing.h  recxy.h  rxy.h
headers/misc/: bool_matrix.h  matrix.h
headers/neuralnet/: neuralnet.h  save.h
include/imgprocessing/: display.h  drawing.h  pixop.h  processing.h  recxy.h  rxy_bintree.h
include/matrix/: matrixop.h
include/misc/: bool_matrix.h  matrix.h  utils.h
include/neuralnet/: layer.h  neuralnet.h  save.h
man/: Makefile.am  imgprocessing.1  neuralnet.1
res/ImagesOCR/Advanced/: index.html
res/ImagesOCR/Simples/: index.html
sources/: layer.c  main.c  neuralnet.c  utils.c
sources/imgprocessing/: box.c  display.c  drawing.c  main.c  pixop.c  processing.c  recxy.c  rxy.c
sources/misc/: bool_matrix.c  utils.c
sources/neuralnet/: layer.c  main.c  neuralnet.c  save.c
src/: Makefile.am.bak
src/generate/: main.c
src/headers/imgprocessing/: box.h  boxes.h  rxy.h
src/headers/misc/: config.h.in  config.h.in~
src/imgprocessing/: box.c  boxes.c  display.c  drawing.c  main.c  pixop.c  processing.c  recxy.c  rxy.c  rxy_bintree.c
src/interface/: inter.c
src/matrix/: matrixop.c
src/misc/: bool_matrix.c  utils.c
src/neuralnet/: layer.c  main.c  neuralnet.c  save.c
src/sources/imgprocessing/: boxes.c  drawing.c  main.c  recxy.c  rxy.c
src/sources/misc/: bool_matrix.c
src/sources/neuralnet/: main.c  save.c
